# day-23-city-breath

./: .env.example  .gitignore  CODE_REVIEW_20251221.md  Procfile  README.md  README_EN.md  main.py  pyproject.toml  zbpack.json
src/: __init__.py  app.py  aqi_client.py  data_store.py
static/css/: main.css
static/js/: app.js  noise.js  rings.js
templates/: index.html
