[project]
name = "city-breath"
version = "1.0.0"
description = "City Breath - Visualizing air quality as organic tree rings"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.11"
authors = [
    { name = "Muripo", email = "muripo@example.com" }
]
keywords = ["air-quality", "aqi", "visualization", "data-art", "taiwan"]

dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "flask-talisman>=1.1.0",
    "flask-limiter>=4.1.1",
    "gunicorn>=21.0.0",
]

[project.urls]
Homepage = "https://github.com/tznthou/muripo-hq"
Repository = "https://github.com/tznthou/muripo-hq"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
